[gd_scene load_steps=8 format=3 uid="uid://b050o7xgpvpiy"]

[ext_resource type="Texture2D" uid="uid://bp54f41nexc" path="res://Assets/GemBg.png" id="1_mv0hc"]
[ext_resource type="Script" uid="uid://b0rxeid5p0oeh" path="res://Scenes/Game/game.gd" id="1_qikps"]
[ext_resource type="PackedScene" uid="uid://bcdf5kwmrexgq" path="res://Scenes/Fox/fox.tscn" id="3_qikps"]
[ext_resource type="FontFile" uid="uid://dae1ig46m0bxb" path="res://Assets/LuckiestGuy-Regular.ttf" id="4_i1e5p"]
[ext_resource type="AudioStream" uid="uid://bvhish8jhaydu" path="res://Assets/tetris.mp3" id="5_ciybh"]

[sub_resource type="LabelSettings" id="LabelSettings_ciybh"]
font = ExtResource("4_i1e5p")
font_size = 40
outline_size = 4
outline_color = Color(0.11764706, 0.11764706, 0.11764706, 1)
shadow_color = Color(0, 0, 0, 0.8)

[sub_resource type="LabelSettings" id="LabelSettings_flgk0"]
font = ExtResource("4_i1e5p")
font_size = 18

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_qikps")

[node name="GemBg" type="Sprite2D" parent="."]
position = Vector2(587, 319.00003)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_mv0hc")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 37.0
offset_top = 29.0
offset_right = 77.0
offset_bottom = 52.0
text = "SCORE"
label_settings = SubResource("LabelSettings_ciybh")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ciybh")
volume_db = -29.578
autoplay = true
parameters/looping = true

[node name="Pausable" type="Node" parent="."]
process_mode = 1

[node name="Fox" parent="Pausable" instance=ExtResource("3_qikps")]
z_index = 1
position = Vector2(587, 597)

[node name="SpawnTimer" type="Timer" parent="Pausable"]
wait_time = 2.0
autostart = true

[node name="Guide" type="Label" parent="."]
offset_left = 951.0
offset_top = 15.0
offset_right = 1133.0
offset_bottom = 38.0
text = "Press ESC To restart"
label_settings = SubResource("LabelSettings_flgk0")

[connection signal="score_point" from="Pausable/Fox" to="." method="_on_fox_score_point"]
[connection signal="timeout" from="Pausable/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
